# pyrocketmq

./: .gitignore  CLAUDE.md  Makefile  README.md  cmd.md  logger_example.py  main.py  pyproject.toml  test_async_remote.py  test_message_properties.py  test_producer_mvp.py  test_remote.py
agent_docs/: broker-module.md  broker.json  consumer-module.md  consumer.json  core-architecture.md  dependency-management.md  development-patterns.md  documentation-maintenance.md  logging-module.md  logging.json  model-module.md  model.json  nameserver-module.md  nameserver.json  producer-module.md  producer.json  project-overview.md  protocol-specification.md  queue_helper.json  remote-module.md  trace.json  transport-module.md  transport.json  utils-module.md
docs/: broker_nameserver_architecture.html  connection_pool_diagram.html  pyrocketmq_architecture.html  query_consumer_offset_usage.md  tcp_state_machine_design.html  transport_layer_architecture.html
examples/: async_processors_example.py  async_transactional_producer.py  basic_producer.py  concurrent_consumer.py  processors_example.py  query_consumer_offset_demo.py  remoting_request_factory_demo.py  simple_batch_producer.py  transactional_producer.py
examples/consumers/: async_orderly_consumer.py  (+5 more)
prompts/: desc.md  doc-fix.json  doc-fix.md  doc_fix.md  func-organize.json  func-organize.md  gen-agent-doc.json  gen-claude.md  import-fix.json  import-fix.md  importer.md  log_fix.md  logger.md  python.md  type-fix.json  type-fix2.md  type_fix.md  type_fix1.md  type_fix2.md  typer.md
tests/: __init__.py  test_serializer.py
(+200 files in other folders)
